--- a/sails_webpack_vue/FE/package.json
+++ b/sails_webpack_vue/FE/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "vue": "^1.0.21",
-    "babel-runtime": "^6.0.0"
+    "babel-runtime": "^6.0.0",
+    "fastclick": "^1.0.6"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -71,6 +72,7 @@
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
+    "postcss-px2rem": "^0.3.0",
     "webpack-merge": "^0.8.3"
   }
 }
