--- a/FE/package.json
+++ b/FE/package.json
@@ -57,6 +57,7 @@
     "karma-webpack": "^1.7.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "lib-flexible": "^0.3.2",
     "lolex": "^1.4.0",
     "mocha": "^2.4.5",
     "nightwatch": "^0.8.18",
