--- a/vue-time-tracker/package.json
+++ b/vue-time-tracker/package.json
@@ -16,6 +16,7 @@
     "babel-runtime": "^6.0.0",
     "vue": "^1.0.21",
     "vue-resource": "^1.0.3",
+    "vuex": "^1.0.0-rc.2",
     "vue-router": "^0.7.13"
   },
   "devDependencies": {
